added lombok support
